# speedagents

./: .gitignore  FIXES.md  IMPROVEMENTS.md  INSTALLATION.md  README.md  README_FEATURES.md  pyproject.toml  pytest.ini
.specstory/history/: 2025-08-02_12-14Z-switching-to-the-cerebras-model.md
examples/: README.md
examples/coding/: coding_agent.py  simple_coding_agent.py
examples/research/: research_agent.py
src/deepagents/: filesystem.py  graph.py  model.py  state.py  sub_agent.py  tools.py
tests/: __init__.py
tests/unit/: test_graph.py  test_state.py
